Add new plot for paper
Add a new, re-labelled and combined plot for the paper

--- a/timeline_train_bus_ebike_mtv_ucb.ipynb
+++ b/timeline_train_bus_ebike_mtv_ucb.ipynb
@@ -115,6 +115,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pvunp.map()[\"ios\"][\"ucb-sdb-ios-2\"][\"transitions\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pvunp.validate()"
    ]
   },
@@ -292,6 +301,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(ifig, android_ax) = plt.subplots(ncols=1, nrows=1, figsize=(6,3))\n",
+    "\n",
+    "color_map = {}\n",
+    "legend_map = {}\n",
+    "\n",
+    "ezpv.plot_collapsed_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\", color_map, legend_map)\n",
+    "legend_map[\"duty cycled:HIGH FREQUENCY\"] = legend_map[\"HAHFDC v/s HAMFDC:HAHFDC\"]\n",
+    "legend_map[\"duty cycled:MEDIUM FREQUENCY\"] = legend_map[\"HAHFDC v/s HAMFDC:HAMFDC\"]\n",
+    "del legend_map[\"HAHFDC v/s HAMFDC:HAHFDC\"]\n",
+    "del legend_map[\"HAHFDC v/s HAMFDC:HAMFDC\"]\n",
+    "android_ax.legend(legend_map.values(), legend_map.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "importlib.reload(ezpv)"
    ]
   },
@@ -316,6 +344,20 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -334,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
