Update to address plots for paper
In particular, rename some plots to be shorter
+ add more labels to the plot
- remove the bad interpolation note since we deleted the bad interpolation range!

--- a/Calibration_stationary_basic_stats.ipynb
+++ b/Calibration_stationary_basic_stats.ipynb
@@ -399,46 +399,12 @@
     "ifig, axes_array = plt.subplots(nrows=row_count, ncols=3, figsize=(20, 120), sharex=True, sharey=True)\n",
     "axes_flat = axes_array.flatten()\n",
     "all_be = []\n",
-    "(i, be) = get_and_verify_battery_drain_at_duration(pv_hf, 5.9993)\n",
+    "(i, be) = explore_interpolated_battery_drain_at_duration(pv_hf, 5.9993)\n",
     "all_be.extend(be)\n",
-    "(i, be) = get_and_verify_battery_drain_at_duration(pv_mf, 5.9993, i)\n",
+    "(i, be) = explore_interpolated_battery_drain_at_duration(pv_mf, 5.9993, i)\n",
     "all_be.extend(be)\n",
     "print(len(all_be))\n",
     "all_be"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Detailed exploration\n",
-    "\n",
-    "There is still one experiment that is flagged as having bad interpolation, which is `['ucb-sdb-android-4_best_high_accuracy_medium_freq_stationary_0']`. Looking carefully at that particular use case, we see that \n",
-    "\n",
-    "```\n",
-    "Extrapolating from 3.772857222225931 -> 5.9993, added 133 more points\n",
-    "WARNING: BAD EXTRAPOLATION\n",
-    "```\n",
-    "\n",
-    "So it looks like for that run, although the run was for 6 hours, we missed the last battery reading and only got data for the first 4 hours."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arrow\n",
-    "sel_range = pv_mf.map()[\"android\"][\"ucb-sdb-android-4\"][\"calibration_ranges\"][0]; print(sel_range[\"trip_id\"])\n",
-    "print(sel_range[\"start_ts\"], arrow.get(sel_range[\"start_ts\"]).to(\"America/Los_Angeles\"), sel_range[\"end_ts\"], arrow.get(sel_range[\"end_ts\"]).to(\"America/Los_Angeles\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will delete this range and re-run the regime to get a valid run"
    ]
   },
   {
@@ -539,9 +505,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifig, ax_array = plt.subplots(nrows=1,ncols=2,figsize=(16,8), sharex=False, sharey=True)\n",
+    "battery_drain_df.replace(\"balanced\", \"balpwr\", inplace=True)\n",
+    "battery_drain_df.replace(\"medium\", \"med\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ifig, ax_array = plt.subplots(nrows=1,ncols=2,figsize=(12,6), sharex=False, sharey=True)\n",
     "battery_drain_df.query(\"phone_os == 'android'\").boxplot(ax=ax_array[0], column=[\"battery_drain\"], by=[\"accuracy_str\", \"frequency_str\"])\n",
-    "battery_drain_df.query(\"phone_os == 'ios'\").boxplot(ax=ax_array[1], column=[\"battery_drain\"], by=[\"accuracy_str\", \"frequency_str\"])"
+    "battery_drain_df.query(\"phone_os == 'ios'\").boxplot(ax=ax_array[1], column=[\"battery_drain\"], by=[\"accuracy_str\", \"frequency_str\"])\n",
+    "for ax in ax_array:\n",
+    "    ax.set_xlabel(\"[accuracy, frequency]\")\n",
+    "\n",
+    "ax_array[0].set_title(\"android\")\n",
+    "ax_array[1].set_title(\"ios\")\n",
+    "ax_array[0].set_ylabel(\"Battery drain (%)\")\n",
+    "ifig.suptitle(\"Boxplot of battery drain for various combinations of accuracy and frequency\")\n",
+    "\n",
+    "# ifig.tight_layout()"
    ]
   },
   {
@@ -561,6 +546,15 @@
     "ax_array[0].set_title(\"accuracy = {0: lowpwr, 1: balanced, 2: high}, frequency = {1: medium, 2: high}\")\n",
     "ax_array[1].set_title(\"accuracy = {0: 100m, 1: 10m, 2: high}, frequency = {1: medium, 2: high}\")\n",
     "ifig.tight_layout(pad=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "battery_drain_df.query(\"phone_os == 'ios' & accuracy == 1 & frequency == 2 & phone_label == 'ucb-sdb-ios-4'\").battery_drain.describe()"
    ]
   },
   {
@@ -599,6 +593,34 @@
     "\n",
     "ifig.tight_layout(pad=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
