--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -281,9 +281,26 @@
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
     "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
-    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.5, 0, -0.5), ncol=2)\n",
+    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.75, 0, -0.5), ncol=2)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
-    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.45), ncol=2)"
+    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.75), ncol=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
+    "\n",
+    "color_map = {}\n",
+    "legend_map = {}\n",
+    "\n",
+    "(color_map, legend_map) = ezpv.plot_collapsed_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\", color_map, legend_map)\n",
+    "(color_map, legend_map) = ezpv.plot_collapsed_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\", color_map, legend_map)\n",
+    "ios_ax.legend(legend_map.values(), legend_map.keys())\n",
+    "android_ax.legend(legend_map.values(), legend_map.keys())"
    ]
   },
   {
@@ -316,6 +333,20 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -334,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
