--- a/Evaluations_power_boxplots.ipynb
+++ b/Evaluations_power_boxplots.ipynb
@@ -125,6 +125,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sd_sj.CURR_SPEC_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ios_loc_entries = sd_sj.retrieve_data_from_server(\"ucb-sdb-ios-1\", [\"background/location\"],\n",
+    "                                arrow.get(\"2019-08-07T14:50:57.445000-07:00\").timestamp,\n",
+    "                                arrow.get(\"2019-08-07T15:00:16.787000-07:00\").timestamp)\n",
+    "ios_location_df = pd.DataFrame([e[\"data\"] for e in ios_loc_entries])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "android_loc_entries = sd_sj.retrieve_data_from_server(\"ucb-sdb-android-1\", [\"background/location\"],\n",
+    "                                arrow.get(\"2019-08-07T14:50:57.445000-07:00\").timestamp,\n",
+    "                                arrow.get(\"2019-08-07T15:00:16.787000-07:00\").timestamp)\n",
+    "android_location_df = pd.DataFrame([e[\"data\"] for e in android_loc_entries])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "android_location_df[[\"fmt_time\"]].loc[30:60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ios_map = ezpv.display_map_detail_from_df(ios_location_df.loc[20:35])\n",
+    "android_map = ezpv.display_map_detail_from_df(android_location_df.loc[25:50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = bre.Figure()\n",
+    "fig.add_subplot(1, 2, 1).add_child(ios_map)\n",
+    "fig.add_subplot(1, 2, 2).add_child(android_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pv_ucb = eipv.PhoneView(sd_ucb)"
    ]
   },
@@ -196,9 +259,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r2q_map = {\"power_control\": 0, \"HAMFDC\": 1, \"MAHFDC\": 1, \"HAHFDC\": 2, \"accuracy_control\": 3}\n",
-    "q2r_android_list = [\"power_control\", \"HAMFDC\", \"HAHFDC\", \"accuracy_control\"]\n",
-    "q2r_ios_list = [\"power_control\", \"MAHFDC\", \"HAHFDC\", \"accuracy_control\"]"
+    "r2q_map = {\"power_control\": 0, \"HAMFDC\": 1, \"MAHFDC\": 2, \"HAHFDC\": 3, \"accuracy_control\": 4}\n",
+    "# right now, only the san jose data has the full comparison\n",
+    "q2r_complete_list = [\"power\", \"HAMFDC\", \"MAHFDC\", \"HAHFDC\", \"accuracy\"]\n",
+    "# others only have android or ios\n",
+    "q2r_android_list = [\"power\", \"HAMFDC\", \"HAHFDC\", \"accuracy\"]\n",
+    "q2r_ios_list = [\"power\", \"MAHFDC\", \"HAHFDC\", \"accuracy\"]"
    ]
   },
   {
@@ -217,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "battery_drain_df.head()"
+    "battery_drain_df.query(\"role == 'MAHFDC'\").head()"
    ]
   },
   {
@@ -230,23 +296,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "ifig, ax_array = plt.subplots(nrows=2,ncols=3,figsize=(16,8), sharex=False, sharey=True)\n",
+    "ifig, ax_array = plt.subplots(nrows=2,ncols=3,figsize=(12,6), sharex=False, sharey=True)\n",
     "timeline_list = [\"train_bus_ebike_mtv_ucb\", \"car_scooter_brex_san_jose\", \"unimodal_trip_car_bike_mtv_la\"]\n",
     "for i, tl in enumerate(timeline_list):\n",
-    "    battery_drain_df.query(\"timeline == @tl & phone_os == 'android'\").boxplot(ax = ax_array[0][i], column=[\"battery_drain\"], by=[\"quality\"], showbox=False, whis=\"range\", medianprops=)\n",
+    "    battery_drain_df.query(\"timeline == @tl & phone_os == 'android'\").boxplot(ax = ax_array[0][i], column=[\"battery_drain\"], by=[\"quality\"], showbox=False, whis=\"range\")\n",
     "    ax_array[0][i].set_title(tl)\n",
     "    battery_drain_df.query(\"timeline == @tl & phone_os == 'ios'\").boxplot(ax = ax_array[1][i], column=[\"battery_drain\"], by=[\"quality\"], showbox=False, whis=\"range\")\n",
     "    ax_array[1][i].set_title(\"\")\n",
     "\n",
-    "for ax in ax_array[0]:\n",
-    "    ax.set_xticklabels(q2r_android_list)\n",
+    "for i, ax in enumerate(ax_array[0]):\n",
+    "    if i == 1:\n",
+    "        ax.set_xticklabels(q2r_complete_list)\n",
+    "    else:\n",
+    "        ax.set_xticklabels(q2r_android_list)\n",
     "    ax.set_xlabel(\"\")\n",
     "\n",
-    "for ax in ax_array[1]:\n",
-    "    ax.set_xticklabels(q2r_ios_list)\n",
+    "for i, ax in enumerate(ax_array[1]):\n",
+    "    if i == 1:\n",
+    "        ax.set_xticklabels(q2r_complete_list)\n",
+    "    else:\n",
+    "        ax.set_xticklabels(q2r_ios_list)\n",
     "    ax.set_xlabel(\"\")\n",
     "\n",
     "ax_array[0][0].set_ylabel(\"Battery drain (android)\")\n",
@@ -256,21 +330,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "### Ground truth\n",
-    "\n",
-    "The ground truth is stored in the spec, and we can retrieve it from there. Once we have retrieved the trip, there are many possible analyses using them. Please see `get_concat_trajectories` for an example."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### For trips\n",
-    "\n",
-    "Using the phone view as an example"
+    "battery_drain_df.query(\"quality == 1 & phone_os == 'ios' & timeline == 'car_scooter_brex_san_jose'\").iloc[1:].describe()"
    ]
   },
   {
@@ -279,32 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for phone_os, phone_map in pv.map().items():\n",
-    "    print(15 * \"=*\")\n",
-    "    print(phone_os, phone_map.keys())\n",
-    "    for phone_label, phone_detail_map in phone_map.items():\n",
-    "        print(4 * ' ', 15 * \"-*\")\n",
-    "        print(4 * ' ', phone_label, phone_detail_map[\"role\"], phone_detail_map.keys())\n",
-    "        # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
-    "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
-    "            print(8 * ' ', 30 * \"=\")\n",
-    "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
-    "                # I am not printing the actual trajectories since that would be too long, only displaying modes\n",
-    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"])\n",
-    "                print(12 * ' ', eisd.SpecDetails.get_concat_trajectories(gt_trip)[\"properties\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## For sections\n",
-    "\n",
-    "Using the eval view as an example"
+    "battery_drain_df.query(\"quality == 0 & phone_os == 'ios' & timeline == 'car_scooter_brex_san_jose'\").iloc[1:].describe()"
    ]
   },
   {
@@ -313,146 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for phone_os, eval_map in ev.map(\"evaluation\").items():\n",
-    "    print(15 * \"=*\")\n",
-    "    print(phone_os, eval_map.keys())\n",
-    "    for (curr_calibrate, curr_calibrate_trip_map) in phone_map.items():\n",
-    "        print(4 * ' ', 15 * \"-*\")\n",
-    "        print(4 * ' ', curr_calibrate, curr_calibrate_trip_map.keys())\n",
-    "        for r in curr_calibrate_trip_map[\"evaluation_ranges\"]:\n",
-    "            print(8 * ' ', 30 * \"=\")\n",
-    "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
-    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
-    "                    print(16 * ' ', 30 * \"-\")\n",
-    "                    gt_leg = sd.get_ground_truth_for_leg(sr[\"trip_id_base\"])\n",
-    "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Work with a single trip\n",
-    "\n",
-    "You can also work with the details of a single trip - here, we look at the battery drain across phones for the third repetition. Code inspired by `plot_all_power_drain`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ifig, ax = plt.subplots(ncols=1, nrows=1, figsize=(10,5))\n",
-    "for phone_os, phone_map in pv.map().items():\n",
-    "    print(15 * \"=*\")\n",
-    "    print(phone_os, phone_map.keys())\n",
-    "    for phone_label, phone_detail_map in phone_map.items():\n",
-    "        print(4 * ' ', 15 * \"-*\")\n",
-    "        print(4 * ' ', phone_label, phone_detail_map[\"role\"], phone_detail_map.keys())\n",
-    "        curr_range = phone_detail_map[\"evaluation_ranges\"][2]\n",
-    "        print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "        battery_df = curr_range[\"battery_df\"]\n",
-    "        battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax,\n",
-    "                        label=\"%s (%s)\" % (phone_label, phone_detail_map[\"role\"]), ylim=(0,100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Work with a single leg\n",
-    "\n",
-    "You can also work with the details of a single leg. This is not likely to be useful for power estimates because there are so few points, but it is going to be easier to work with trajectory estimates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "third_repetition = pv.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_ranges\"][2]; third_repetition[\"trip_id\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bart_leg = third_repetition[\"evaluation_trip_ranges\"][0][\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gt_leg = sd.get_ground_truth_for_leg(bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display the leg\n",
-    "\n",
-    "Note the layer control on the map that allows you to toggle the lines separately"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curr_map = folium.Map()\n",
-    "gt_leg_gj = sd.get_geojson_for_leg(gt_leg)\n",
-    "sensed_section_gj = ezpv.get_geojson_for_leg(bart_leg)\n",
-    "gt_leg_gj_feature = folium.GeoJson(gt_leg_gj, name=\"ground_truth\")\n",
-    "sensed_leg_gj_feature = folium.GeoJson(sensed_section_gj, name=\"sensed_values\")\n",
-    "curr_map.add_child(gt_leg_gj_feature)\n",
-    "curr_map.add_child(sensed_leg_gj_feature)\n",
-    "curr_map.fit_bounds(sensed_leg_gj_feature.get_bounds())\n",
-    "folium.LayerControl().add_to(curr_map)\n",
-    "curr_map"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display the leg with points\n",
-    "\n",
-    "In this case, the points are in a separate layer so they can be toggled indepdendently of the underlying lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curr_map = folium.Map()\n",
-    "gt_leg_gj = sd.get_geojson_for_leg(gt_leg)\n",
-    "sensed_section_gj = ezpv.get_geojson_for_leg(bart_leg)\n",
-    "gt_leg_gj_feature = folium.GeoJson(gt_leg_gj, name=\"ground_truth\")\n",
-    "gt_leg_gj_points = ezpv.get_point_markers(gt_leg_gj[2], name=\"ground_truth_points\", color=\"green\")\n",
-    "sensed_leg_gj_feature = folium.GeoJson(sensed_section_gj, name=\"sensed_values\")\n",
-    "sensed_leg_gj_points = ezpv.get_point_markers(sensed_section_gj, name=\"sensed_points\", color=\"red\")\n",
-    "curr_map.add_child(gt_leg_gj_feature)\n",
-    "curr_map.add_child(gt_leg_gj_points)\n",
-    "curr_map.add_child(sensed_leg_gj_feature)\n",
-    "curr_map.add_child(sensed_leg_gj_points)\n",
-    "curr_map.fit_bounds(sensed_leg_gj_feature.get_bounds())\n",
-    "folium.LayerControl().add_to(curr_map)\n",
-    "curr_map"
+    "battery_drain_df.query(\"quality == 2 & phone_os == 'ios' & timeline == 'car_scooter_brex_san_jose'\").iloc[1:].describe()"
    ]
   },
   {
