Pass in the trip id in addition to the leg id to find ground truth
Although we recently ensured that the ground truth ids for shim legs will be
unique (b1288f37c99b7f99825a38940ee4ac8cacdc85cf), we only do so in the context
of a single trip.

```
+            assert not has_duplicate_legs(t), \
+                "Found duplicate leg ids in trip %s" % t["id"]
```

This means that ids **can be repeated** in different trips of the same
timeline. So we need to pass in the trip id as well as the leg id to retrieve
the ground truth.

In this commit, we change the method arguments + all call sites

Testing done:

```
PYTHONPATH=. python bin/import_public_data.py http://cardshark.cs.berkeley.edu shankari@eecs.berkeley.edu unimodal_trip_car_bike_mtv_la
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                 walk_end_0 dict_keys(['trip_id', 'trip_id_base', 'trip_run', 'start_ts', 'end_ts', 'duration', 'battery_df', 'location_df', 'motion_activity_df', 'transition_df'])
About to post messages {'user': 'ucb-sdb-ios-4', 'the_entry': {'metadata': {'write_ts': 1564358080.2698169, 'read_ts': 1564358080.2698169, 'time_zone': 'America/Los_Angeles', 'type': 'message', 'key': 'manual/mode_confirm', 'platform': 'ios'}, 'data': {'label': 'WALKING', 'start_ts': 1564358050.1955462, 'end_ts': 1564358080.2698169}}}
response = <Response [200]>
```

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -262,7 +262,7 @@
     "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
     "                for sr in tr[\"evaluation_section_ranges\"]:\n",
     "                    print(16 * ' ', 30 * \"-\")\n",
-    "                    gt_leg = sd.get_ground_truth_for_leg(sr[\"trip_id_base\"])\n",
+    "                    gt_leg = sd.get_ground_truth_for_leg(tr[\"trip_id_base\"], sr[\"trip_id_base\"])\n",
     "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
    ]
   },
@@ -319,7 +319,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bart_leg = third_repetition[\"evaluation_trip_ranges\"][0][\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
+    "to_ucb_trip = third_repetition[\"evaluation_trip_ranges\"][0]; print(to_ucb_trip[\"trip_id\"])\n",
+    "bart_leg = to_ucb_trip[\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
    ]
   },
   {
@@ -328,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_leg = sd.get_ground_truth_for_leg(bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
+    "gt_leg = sd.get_ground_truth_for_leg(to_ucb_trip[\"trip_id_base\"], bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
    ]
   },
   {
@@ -402,6 +403,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -420,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
