--- a/Evaluate_power_vs_motion_activity.ipynb
+++ b/Evaluate_power_vs_motion_activity.ipynb
@@ -274,7 +274,7 @@
     "                        if section[\"trip_id_base\"] == \"walk_start\":\n",
     "                            gt_mode = \"WALKING\"\n",
     "                        else:\n",
-    "                            gt_mode = pv.spec_details.get_ground_truth_for_leg(section[\"trip_id_base\"])[\"mode\"]\n",
+    "                            gt_mode = pv.spec_details.get_ground_truth_for_leg(tr[\"trip_id_base\"], section[\"trip_id_base\"])[\"mode\"]\n",
     "                        if gt_mode == \"STOPPED\":\n",
     "                            # This is the \"WAIT FOR X\" leg which should largely be stationary, but can involve\n",
     "                            # walking to the door, walking inside the vehicle, etc\n",
