Add additional checks for ensuring that the ground truth starts/ends in the polygons

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -29,7 +29,11 @@
     "import branca.element as bre\n",
     "import json\n",
     "import geojson as gj\n",
-    "import arrow"
+    "import arrow\n",
+    "\n",
+    "import shapely.geometry as shpg\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd"
    ]
   },
   {
@@ -238,6 +242,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Validating start and end polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_start_end_contains(leg):\n",
+    "    points = gpd.GeoSeries([shpg.Point(p) for p in leg[\"route_coords\"][\"geometry\"][\"coordinates\"]])\n",
+    "    start_loc = shpg.shape(leg[\"start_loc\"][\"geometry\"])\n",
+    "    end_loc = shpg.shape(leg[\"end_loc\"][\"geometry\"])\n",
+    "    start_contains = points.apply(lambda p: start_loc.contains(p))\n",
+    "    print(points[start_contains])\n",
+    "    end_contains = points.apply(lambda p: end_loc.contains(p))\n",
+    "    print(points[end_contains])\n",
+    "    # Some of the points are within the start and end polygons\n",
+    "    assert start_contains.any()\n",
+    "    assert end_contains.any()\n",
+    "    \n",
+    "    # The first and last point are within the start and end polygons\n",
+    "    assert start_contains.iloc[0], points.head()\n",
+    "    assert end_contains.iloc[-1], points.tail()\n",
+    "    \n",
+    "    # The points within the polygons are contiguous\n",
+    "    max_index_diff_start = pd.Series(start_contains[start_contains == True].index).diff().max()\n",
+    "    max_index_diff_end = pd.Series(end_contains[end_contains == True].index).diff().max()\n",
+    "    assert pd.isnull(max_index_diff_start) or max_index_diff_start == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(start_contains[end_contains == True].index).diff().max(), points.head())\n",
+    "    assert pd.isnull(max_index_diff_end) or max_index_diff_end == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(end_contains[end_contains == True].index).diff().max(), points.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "invalid_legs = []\n",
+    "for t in evaluation_trips:\n",
+    "    for l in t[\"legs\"]:\n",
+    "        if l[\"type\"] == \"TRAVEL\" and l[\"id\"] not in invalid_legs:\n",
+    "            print(\"Checking leg %s, %s\" % (t[\"id\"], l[\"id\"]))\n",
+    "            check_start_end_contains(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Validating sensing settings"
    ]
   },
@@ -254,6 +310,20 @@
     "            if ssc[\"id\"] != compare_list[i]:\n",
     "                print(\"Mismatch in sensing configurations for %s\" % ss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -279,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
