Refactor segmentation calculations
Fix segmentation calculations based on investigating outliers
Refactor the calculations to a separate module to make it easier to use the
same functions for the analysed results

--- a/Evaluate_power_vs_motion_activity.ipynb
+++ b/Evaluate_power_vs_motion_activity.ipynb
@@ -182,9 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_transition_mask_android(df):\n",
-    "    # print(df.zzbhB.diff())\n",
-    "    return df.zzbhB.diff().abs().fillna(1) > 0"
+    "importlib.reload(ems)"
    ]
   },
   {
@@ -193,43 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_transition_mask_ios(df):\n",
-    "    if len(df) == 0:\n",
-    "        return np.array([])\n",
-    "    \n",
-    "    ret_list = [True]\n",
-    "    valid_modes = [\"walking\", \"cycling\", \"running\", \"automotive\"]\n",
-    "    # print(\"df = %s\" % df[valid_modes])\n",
-    "    # print(\"changes = %s\" % np.diff(df[valid_modes], axis=0))\n",
-    "    for row in np.diff(df[valid_modes], axis=0):\n",
-    "        ret_list.append(row.any())\n",
-    "    ret_array = np.array(ret_list)\n",
-    "    # print(df.shape, ret_array.shape, ret_array)\n",
-    "    return ret_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ANDROID_VALID_QUERY_WITH_STILL = \"zzbhB not in [4,5]\"\n",
-    "IOS_VALID_QUERY_WITH_STILL = \"automotive == True | cycling == True | running == True | walking == True | stationary == True\"\n",
-    "VALID_QUERIES_WITH_STILL = {\"android\": ANDROID_VALID_QUERY_WITH_STILL,\n",
-    "                 \"ios\": IOS_VALID_QUERY_WITH_STILL}\n",
-    "\n",
-    "ANDROID_STILL_ENTRIES = \"zzbhB == 3\"\n",
-    "IOS_STILL_ENTRIES = \"stationary == True\"\n",
-    "STILL_ENTRIES = {\"android\": ANDROID_STILL_ENTRIES,\n",
-    "                 \"ios\": IOS_STILL_ENTRIES}\n",
-    "\n",
-    "ANDROID_VALID_QUERY_NO_STILL = \"zzbhB not in [3,4,5]\"\n",
-    "IOS_VALID_QUERY_NO_STILL = \"automotive == True | cycling == True | running == True | walking == True\"\n",
-    "VALID_QUERIES_NO_STILL = {\"android\": ANDROID_VALID_QUERY_NO_STILL,\n",
-    "                 \"ios\": IOS_VALID_QUERY_NO_STILL}\n",
-    "\n",
-    "ANDROID_MODE_MAP = {0: \"AUTOMOTIVE\", 1: \"BICYCLING\", 2: \"WALKING\", 3: \"STATIONARY\"}\n",
+    "ANDROID_MODE_MAP = {0: \"AUTOMOTIVE\", 1: \"CYCLING\", 2: \"WALKING\", 3: \"STATIONARY\"}\n",
     "ANDROID_MAP_FN = lambda t: ANDROID_MODE_MAP[t[\"zzbhB\"]]\n",
     "\n",
     "def IOS_MAP_FN(t):\n",
@@ -242,7 +204,7 @@
     "        return \"INVALID\"\n",
     "\n",
     "MAP_FNS = {\"android\": ANDROID_MAP_FN, \"ios\": IOS_MAP_FN}\n",
-    "TRANSITION_FNS = {\"android\": get_transition_mask_android, \"ios\": get_transition_mask_ios}"
+    "TRANSITION_FNS = {\"android\": ems.get_transition_mask_android, \"ios\": ems.get_transition_mask_ios}"
    ]
   },
   {
@@ -251,7 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ems)"
+    "ems.fill_sensed_section_ranges(pv_la)\n",
+    "ems.fill_sensed_section_ranges(pv_sj)\n",
+    "ems.fill_sensed_section_ranges(pv_ucb)"
    ]
   },
   {
@@ -280,31 +244,6 @@
     "                delta_battery = bcs.iloc[0] - bcs.iloc[-1]\n",
     "                print(\"Battery starts at %d, ends at %d, drain = %d\" % (bcs.iloc[0], bcs.iloc[-1], delta_battery))\n",
     "                for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                    trip_ma_df = tr[\"motion_activity_df\"]\n",
-    "                    # we may get some transitions after the trip ends \n",
-    "                    # let's expand the activity range to account for that\n",
-    "                    trip_end_ts = tr[\"end_ts\"]\n",
-    "                    extended_ma_df = r[\"motion_activity_df\"].query(\"@trip_end_ts <= ts <= @trip_end_ts + 30 * 60\")\n",
-    "                    ma_df = pd.concat([trip_ma_df, extended_ma_df],\n",
-    "                            axis=\"index\")\n",
-    "\n",
-    "                    curr_trip_section_transitions = ems.find_section_transitions(\n",
-    "                        ma_df.query(VALID_QUERIES_NO_STILL[phone_os]), TRANSITION_FNS[phone_os])\n",
-    "                    \n",
-    "                    last_section = tr[\"evaluation_section_ranges\"][-1]\n",
-    "                    last_section_gt = pv.spec_details.get_ground_truth_for_leg(tr[\"trip_id_base\"], last_section[\"trip_id_base\"])\n",
-    "                    if last_section_gt[\"mode\"] == \"WALKING\":\n",
-    "                        # For trip that end in walking, we need to include still transitions as valid\n",
-    "                        # otherwise, there is no end transition from walking to a valid mode\n",
-    "                        print(\"Trip ending in walking found, checking for any final still transitions\")\n",
-    "                        still_section_transitions = extended_ma_df.query(STILL_ENTRIES[phone_os])\n",
-    "                        if len(still_section_transitions) > 0:\n",
-    "                            curr_trip_section_transitions = curr_trip_section_transitions.append(still_section_transitions.iloc[0])\n",
-    "\n",
-    "                    print(curr_trip_section_transitions.index)\n",
-    "                    curr_trip_section_ranges = ems.find_section_ranges(curr_trip_section_transitions,\n",
-    "                                                                           MAP_FNS[phone_os])\n",
-    "                    tr[\"sensed_section_ranges\"] = curr_trip_section_ranges\n",
     "                    matching_section_map = ems.find_matching_segments(tr[\"evaluation_section_ranges\"], \n",
     "                                                                      \"trip_id\", tr[\"sensed_section_ranges\"])\n",
     "                    print(\"For trip %s, found matching ranges %s\" % (tr[\"trip_id\"], matching_section_map))\n",
@@ -323,7 +262,7 @@
     "                                      \"range_id\": r[\"trip_id\"],\n",
     "                                     \"run\": r[\"trip_run\"], \"duration\": r[\"duration\"],\n",
     "                                     \"role\": r[\"eval_role_base\"], \"battery_drain\": delta_battery,\n",
-    "                                     \"section_count\": len(curr_trip_section_ranges),\n",
+    "                                     \"section_count\": len(tr[\"sensed_section_ranges\"]),\n",
     "                                      \"trip_id\": tr[\"trip_id\"],\n",
     "                                      \"section_id\": section[\"trip_id\"]}\n",
     "                        tradeoff_entry.update(results)\n",
@@ -451,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ems.find_section_transitions(pv_la.map()[\"android\"][\"ucb-sdb-android-2\"][\"evaluation_ranges\"][3][\"evaluation_trip_ranges\"][0][\"motion_activity_df\"].query(ANDROID_VALID_QUERY_NO_STILL), TRANSITION_FNS[\"android\"])"
+    "ems.find_section_transitions(pv_la.map()[\"android\"][\"ucb-sdb-android-2\"][\"evaluation_ranges\"][3][\"evaluation_trip_ranges\"][0][\"motion_activity_df\"].query(ems.ANDROID_VALID_QUERY_NO_STILL), ems.TRANSITION_FNS[\"android\"])"
    ]
   },
   {
@@ -729,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pv_ucb.map()['ios']['ucb-sdb-ios-2'][\"evaluation_ranges\"][2][\"evaluation_trip_ranges\"][0][\"motion_activity_df\"].query(\"1564155116 <= ts <= 1564157521\").query(IOS_VALID_QUERY_NO_STILL).loc[50:60]"
+    "pv_ucb.map()['ios']['ucb-sdb-ios-2'][\"evaluation_ranges\"][2][\"evaluation_trip_ranges\"][0][\"motion_activity_df\"].query(\"1564155116 <= ts <= 1564157521\").query(ems.IOS_VALID_QUERY_NO_STILL).loc[50:60]"
    ]
   },
   {
