--- a/Evaluate_power_vs_trip_start_end.ipynb
+++ b/Evaluate_power_vs_trip_start_end.ipynb
@@ -206,43 +206,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def fill_sensed_trip_ranges(pv):\n",
-    "    for phone_os, phone_map in pv.map().items():\n",
-    "        print(15 * \"=*\")\n",
-    "        print(phone_os, phone_map.keys())\n",
-    "        for phone_label, phone_detail_map in phone_map.items():\n",
-    "            print(4 * ' ', 15 * \"-*\")\n",
-    "            print(4 * ' ', phone_label, phone_detail_map[\"role\"], phone_detail_map.keys())\n",
-    "            if \"control\" in phone_detail_map[\"role\"]:\n",
-    "                print(\"Ignoring %s phone %s since they are always on\" % (phone_detail_map[\"role\"], phone_label))\n",
-    "                continue\n",
-    "            # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
-    "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
-    "                print(8 * ' ', 30 * \"=\")\n",
-    "                print(8 * ' ',r.keys())\n",
-    "                print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "                # print(r[\"transition_df\"][[\"transition\", \"fmt_time\"]])\n",
-    "                if phone_os == \"android\":\n",
-    "                    query_str = \"transition == 'local.transition.exited_geofence' | transition == 'local.transition.stopped_moving'\"\n",
-    "                else:\n",
-    "                    assert phone_os == \"ios\"\n",
-    "                    query_str = \"transition == 'T_EXITED_GEOFENCE' | transition == 'T_VISIT_ENDED' | transition == 'T_VISIT_STARTED' | transition == 'T_TRIP_ENDED'\"\n",
-    "\n",
-    "                sensed_transitions = r[\"transition_df\"].query(query_str)\n",
-    "                print(sensed_transitions[[\"transition\", \"fmt_time\"]])\n",
-    "                if phone_os == \"android\":\n",
-    "                    r[\"sensed_trip_ranges\"] = ems.find_ranges(sensed_transitions, \"local.transition.exited_geofence\", \"local.transition.stopped_moving\")\n",
-    "                    r[\"visit_sensed_trip_ranges\"] = []\n",
-    "                else:\n",
-    "                    assert phone_os == \"ios\"\n",
-    "                    r[\"sensed_trip_ranges\"] = ems.find_ranges(sensed_transitions, \"T_EXITED_GEOFENCE\", \"T_TRIP_ENDED\")\n",
-    "                    r[\"visit_sensed_trip_ranges\"] = ems.find_ranges(sensed_transitions, \"T_VISIT_ENDED\", \"T_VISIT_STARTED\")\n",
-    "\n",
-    "                ground_truth_ranges = r[\"evaluation_trip_ranges\"]\n",
-    "                # print([(r[\"start_ts\"], arrow.get(r[\"start_ts\"]).to(\"America/Los_Angeles\"), r[\"end_ts\"], arrow.get(r[\"end_ts\"]).to(\"America/Los_Angeles\")) for r in ground_truth_ranges])\n",
-    "                print(8 * ' ', len(r[\"sensed_trip_ranges\"]), len(r[\"visit_sensed_trip_ranges\"]), len(ground_truth_ranges))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -250,9 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fill_sensed_trip_ranges(pv_la)\n",
-    "fill_sensed_trip_ranges(pv_sj)\n",
-    "fill_sensed_trip_ranges(pv_ucb)"
+    "ems.fill_sensed_trip_ranges(pv_la)\n",
+    "ems.fill_sensed_trip_ranges(pv_sj)\n",
+    "ems.fill_sensed_trip_ranges(pv_ucb)"
    ]
   },
   {
