--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -115,6 +115,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import arrow\n",
+    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"transitions\"]:\n",
+    "    if t[\"data\"][\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"data\"][\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
+    "        print(t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(sdunp.eval_tz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pvunp.validate()"
    ]
   },
@@ -126,24 +138,6 @@
    "source": [
     "evunp = eiev.EvaluationView()\n",
     "evunp.from_view_eval_trips(pvunp, \"\", \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[r[\"trip_id\"] for r in pvunp.map()[\"ios\"][\"ucb-sdb-ios-2\"][\"evaluation_ranges\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezev)"
    ]
   },
   {
@@ -161,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -185,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -201,15 +195,6 @@
    "outputs": [],
    "source": [
     "evaluation_maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezev)"
    ]
   },
   {
@@ -225,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -247,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -301,15 +286,6 @@
     "(color_map, legend_map) = ezpv.plot_collapsed_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\", color_map, legend_map)\n",
     "ios_ax.legend(legend_map.values(), legend_map.keys())\n",
     "android_ax.legend(legend_map.values(), legend_map.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezpv)"
    ]
   },
   {
