--- a/timeline_train_bus_ebike_mtv_ucb.ipynb
+++ b/timeline_train_bus_ebike_mtv_ucb.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_sm_reroute_mtv_ucb\")"
    ]
   },
   {
@@ -115,7 +115,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pvunp.map()[\"ios\"][\"ucb-sdb-ios-2\"][\"transitions\"]"
+    "import arrow\n",
+    "for t in pvunp.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"transitions\"]:\n",
+    "    if t[\"data\"][\"transition\"] in [\"START_EVALUATION_PERIOD\", \"STOP_EVALUATION_PERIOD\"] and t[\"data\"][\"spec_id\"] == sdunp.CURR_SPEC_ID:\n",
+    "        print(t[\"_id\"], t[\"data\"][\"transition\"], t[\"data\"][\"trip_id\"], arrow.get(t[\"data\"][\"ts\"]).to(sdunp.eval_tz))"
    ]
   },
   {
@@ -138,24 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[r[\"trip_id\"] for r in pvunp.map()[\"ios\"][\"ucb-sdb-ios-2\"][\"evaluation_ranges\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezev)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -194,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "map_list = ezev.get_map_list_eval_trips(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -210,15 +195,6 @@
    "outputs": [],
    "source": [
     "evaluation_maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezev)"
    ]
   },
   {
@@ -234,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -256,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|HAMFDC|MAHFDC|MAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(map_list):\n",
@@ -290,9 +266,9 @@
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
     "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
-    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.5, 0, -0.5), ncol=2)\n",
+    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.75, 0, -0.5), ncol=2)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
-    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.45), ncol=2)"
+    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.75), ncol=2)"
    ]
   },
   {
@@ -301,26 +277,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, android_ax) = plt.subplots(ncols=1, nrows=1, figsize=(6,3))\n",
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
     "color_map = {}\n",
     "legend_map = {}\n",
     "\n",
-    "ezpv.plot_collapsed_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\", color_map, legend_map)\n",
-    "legend_map[\"duty cycled:HIGH FREQUENCY\"] = legend_map[\"HAHFDC v/s HAMFDC:HAHFDC\"]\n",
-    "legend_map[\"duty cycled:MEDIUM FREQUENCY\"] = legend_map[\"HAHFDC v/s HAMFDC:HAMFDC\"]\n",
-    "del legend_map[\"HAHFDC v/s HAMFDC:HAHFDC\"]\n",
-    "del legend_map[\"HAHFDC v/s HAMFDC:HAMFDC\"]\n",
+    "(color_map, legend_map) = ezpv.plot_collapsed_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\", color_map, legend_map)\n",
+    "(color_map, legend_map) = ezpv.plot_collapsed_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\", color_map, legend_map)\n",
+    "ios_ax.legend(legend_map.values(), legend_map.keys())\n",
     "android_ax.legend(legend_map.values(), legend_map.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezpv)"
    ]
   },
   {
@@ -376,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
