added explanation for tags like HAHFFDC in san jose

--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -138,6 +138,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see these evaluation trips have labels such as `HAHFDC_0`, or `HAMFDC_0`. What do these mean?\n",
+    "\n",
+    "`HA` or `MA` refer to high accuracy or medium accuracy, respectively. Trips with `HA` will tend to favor GPS utilization and result in high power consumption.\n",
+    "\n",
+    "`HF` or `MF` refer to high frequency or medium accuracy, respectively. Trips with `HF` will sense and process more often, and are likely to have higher spatiotemporal accuracy (e.g. will hug corners more accurately), albeit with higher power consumption."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -333,20 +344,6 @@
     "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -365,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
