adapt script to display maps with new spec (still some debugging left to do)

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment runs from 2019-07-16T07:00:00+00:00 -> 2020-04-30T07:00:00+00:00\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Experiment runs from %s -> %s\" % (arrow.get(spec_to_validate[\"start_ts\"]), arrow.get(spec_to_validate[\"end_ts\"])))\n",
     "start_fmt_time_to_validate = arrow.get(spec_to_validate[\"start_ts\"]).format(\"YYYY-MM-DD\")\n",
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,11 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:(0.0, 4);\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><iframe src=\"data:text/html;charset=utf-8;base64,PCFET0NUWVBFIGh0bWw+CjxoZWFkPiAgICAKICAgIDxtZXRhIGh0dHAtZXF1aXY9ImNvbnRlbnQtdHlwZSIgY29udGVudD0idGV4dC9odG1sOyBjaGFyc2V0PVVURi04IiAvPgo8L2hlYWQ+Cjxib2R5PiAgICAKPC9ib2R5Pgo8c2NyaXB0PiAgICAKPC9zY3JpcHQ+\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<branca.element.Figure at 0x7fbacc86d820>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "calibration_tests = spec_to_validate[\"calibration_tests\"]\n",
     "rows = get_row_count(len(calibration_tests), 4)\n",
@@ -188,9 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-4acadc3f5563>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-4acadc3f5563>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    if isinstance(trip[\"waypoint_coords\"], dict)\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def get_map_for_travel_leg(trip):\n",
     "    curr_map = folium.Map()\n",
@@ -198,17 +229,27 @@
     "    [m.add_to(curr_map) for m in get_marker(trip[\"end_loc\"], \"red\")]\n",
     "    # trips from relations won't have waypoints\n",
     "    if \"waypoint_coords\" in trip:\n",
-    "        for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
-    "            folium.map.Marker(\n",
-    "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
-    "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
-    "    print(\"Found %s coordinates for the route\" % ([len(clist) for clist in trip[\"route_coords\"][\"geometry\"][\"coordinates\"]]))\n",
-    "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"][\"geometry\"][\"coordinates\"]]\n",
-    "    folium.PolyLine(latlng_route_coords,\n",
-    "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
+    "        if isinstance(trip[\"waypoint_coords\"], dict):\n",
+    "            for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
+    "                folium.map.Marker(\n",
+    "                    lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "                    icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "        else:\n",
+    "            for wpcs in trip[\"waypoint_coords\"]:\n",
+    "                for i, wpc in enumerate(wpcs[\"geometry\"][\"coordinates\"]):\n",
+    "                    folium.map.Marker(\n",
+    "                        lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "                        icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "    \n",
+    "    latlng_route_coords = [[lonlat_swap(rc) for rc in coords[\"geometry\"][\"coordinates\"]] for coords in trip[\"route_coords\"]]\n",
+    "    for ll in latlng_route_coords:\n",
+    "        folium.PolyLine(ll, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
+    "        \n",
     "    for i, c in enumerate(latlng_route_coords):\n",
     "        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
-    "    curr_map.fit_bounds(ful.get_bounds(trip[\"route_coords\"][\"geometry\"][\"coordinates\"], lonlat=True))    \n",
+    "        \n",
+    "    curr_map.fit_bounds(ful.get_bounds(trip[\"route_coords\"][0][\"geometry\"][\"coordinates\"], lonlat=True))\n",
+    "    \n",
     "    return curr_map"
    ]
   },
@@ -220,9 +261,10 @@
    "source": [
     "def get_map_for_shim_leg(trip):\n",
     "    curr_map = folium.Map()\n",
-    "    mkr = get_marker(trip[\"loc\"], \"purple\")\n",
-    "    mkr.add_to(curr_map)\n",
-    "    curr_map.fit_bounds(mkr.get_bounds())\n",
+    "    mkrs = get_marker(trip[\"loc\"], \"purple\")\n",
+    "    for mkr in mkrs:\n",
+    "        mkr.add_to(curr_map)\n",
+    "    curr_map.fit_bounds(mkrs[0].get_bounds())\n",
     "    return curr_map"
    ]
   },
