add lat-lng flipping, refactor waypoint marker creation

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -192,6 +192,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add_waypoint_markers(waypoint_coords, curr_map):\n",
+    "    for i, wpc in enumerate(waypoint_coords[\"geometry\"][\"coordinates\"]):\n",
+    "        folium.map.Marker(\n",
+    "            lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "            icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "\n",
     "def get_map_for_travel_leg(trip):\n",
     "    curr_map = folium.Map()\n",
     "    [get_one_marker(loc, \"green\").add_to(curr_map) for loc in trip[\"start_loc\"]]\n",
@@ -199,26 +205,24 @@
     "    \n",
     "    # trips from relations won't have waypoints\n",
     "    if \"waypoint_coords\" in trip:\n",
-    "        if isinstance(trip[\"waypoint_coords\"], dict):\n",
-    "            for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
-    "                folium.map.Marker(\n",
-    "                    lonlat_swap(wpc), popup=\"%d\" % i,\n",
-    "                    icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "        if isinstance(waypoint_coords := trip[\"waypoint_coords\"], dict):\n",
+    "            add_waypoint_markers(waypoint_coords, curr_map)\n",
     "        else:\n",
-    "            for wpcs in trip[\"waypoint_coords\"]:\n",
-    "                for i, wpc in enumerate(wpcs[\"geometry\"][\"coordinates\"]):\n",
-    "                    folium.map.Marker(\n",
-    "                        lonlat_swap(wpc), popup=\"%d\" % i,\n",
-    "                        icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "            for w in waypoint_coords:\n",
+    "                add_waypoint_markers(w, curr_map)\n",
     "    \n",
     "    # iterate over all reroutes\n",
     "    for rc in trip[\"route_coords\"]:\n",
     "        for coords in rc[\"geometry\"][\"coordinates\"]:\n",
     "            print(\"Found %d coordinates for the route\" % (len(coords)))\n",
-    "            folium.PolyLine(coords, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
-    "            for i, c in enumerate(coords):\n",
+    "            \n",
+    "            latlng_coords = [lonlat_swap(c) for c in coords]\n",
+    "            folium.PolyLine(latlng_coords, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
+    "            \n",
+    "            for i, c in enumerate(latlng_coords):\n",
     "                folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
-    "            curr_map.fit_bounds(coords)\n",
+    "            \n",
+    "            curr_map.fit_bounds(ful.get_bounds(latlng_coords, lonlat=True))\n",
     "    \n",
     "    return curr_map"
    ]
