fix incorrect ordering of coordinates for routes

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -222,7 +222,7 @@
     "            for i, c in enumerate(latlng_coords):\n",
     "                folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
     "            \n",
-    "            curr_map.fit_bounds(ful.get_bounds(latlng_coords, lonlat=True))\n",
+    "            curr_map.fit_bounds(ful.get_bounds(latlng_coords))\n",
     "    \n",
     "    return curr_map"
    ]
